force-app/main/default/objects/IFv2_HomeScreenPage__mdt/IFv2_HomeScreenPage__mdt.object-meta.xml
<CustomObject>
    <description>Used to Create data for Home Screen</description>
    <label>Home Screen Page</label>
    <pluralLabel>Home Screen Page</pluralLabel>
</CustomObject>