force-app/main/default/objects/IFv2_HomeScreenPage__mdt/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To be displayed on Home Screen or not</description>
    <inlineHelpText>Please check to enable this record and display on the Home Page</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>