force-app/main/default/objects/IFv2_HomeScreenPage__mdt/fields/Color__c.field-meta.xml
<CustomField>
    <fullName>Color__c</fullName>
    <description>Displays the color on Pie chart</description>
    <inlineHelpText>Please enter the color Hex Code in this format - #RRGGBB</inlineHelpText>
    <label>Color</label>
    <length>255</length>
    <type>Text</type>
</CustomField>