force-app/main/default/objects/IFv2_HomeScreenPage__mdt/fields/Default__c.field-meta.xml
<CustomField>
    <fullName>Default__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Default Record based on the status to be displayed</description>
    <inlineHelpText>Please check to make this the default record to be displayed while landing on the Home Page</inlineHelpText>
    <label>Default</label>
    <type>Checkbox</type>
</CustomField>