force-app/main/default/objects/IFv2_HomeScreenPage__mdt/fields/Fields__c.field-meta.xml
<CustomField>
    <fullName>Fields__c</fullName>
    <description>Displays list of datatable fields</description>
    <inlineHelpText>Please enter the fieldset API name here</inlineHelpText>
    <label>Fields</label>
    <length>255</length>
    <type>Text</type>
</CustomField>