force-app/main/default/objects/IFv2_HomeScreenPage__mdt/fields/IsApprover__c.field-meta.xml
<CustomField>
    <fullName>IsApprover__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checks if Approver or Applicant</description>
    <inlineHelpText>Please check if the User will be the Approver for these records</inlineHelpText>
    <label>IsApprover</label>
    <type>Checkbox</type>
</CustomField>