force-app/main/default/objects/IFv2_HomeScreenPage__mdt/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <description>Stores the Order to be displayed</description>
    <inlineHelpText>Please enter the position at which this record should be displayed</inlineHelpText>
    <label>Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>