force-app/main/default/objects/IFv2_HomeScreenPage__mdt/fields/Request_Status__c.field-meta.xml
<CustomField>
    <fullName>Request_Status__c</fullName>
    <description>Holds the Request Status</description>
    <inlineHelpText>Draft - Requests in Draft status
Pending - Requests in Pending status
Submitted - Requests in Submitted status
Approved - Requests in Approved status
Rejected - Requests in Rejected status</inlineHelpText>
    <label>Request Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
                <default>true</default>
                <label>Draft</label>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Submitted</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>