force-app/main/default/objects/IFv2_HomeScreenPage__mdt/listViews/MyView.listView-meta.xml
<ListView>
    <fullName>MyView</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>Order__c</columns>
    <columns>Request_Status__c</columns>
    <columns>Default__c</columns>
    <columns>Fields__c</columns>
    <columns>Color__c</columns>
    <columns>IsApprover__c</columns>
    <columns>Active__c</columns>
    <filterScope>Everything</filterScope>
    <label>My View</label>
    <language>en_US</language>
</ListView>